--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -22,6 +22,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: hp7hao/fcdbtool
+        ref: main
         path: fcdbtool
         token: ${{ secrets.FCDBTOOL }}
 
